--- a/booking-lapangan/booking.html
+++ b/booking-lapangan/booking.html
@@ -63,7 +63,7 @@
             <div class="lapangan-card">
                 <img src="img/lapanganbola1.jpg" alt="Lapangan 1">
                 <div class="lapangan-info">
-                    <h3>Lapangan A</h3>
+                    <h3>Lapangan Sepak Bola</h3>
                     <p>Kapasitas: 20 Orang</p>
                     <p>Status: <span class="available">Tersedia</span></p>
                     <p>Deskripsi: Lapangan dengan fasilitas terbaik untuk permainan futsal atau sepak bola.</p>
@@ -71,9 +71,9 @@
             </div>
 
             <div class="lapangan-card">
-                <img src="img/lapanganbola2.jpg" alt="Lapangan 2">
+                <img src="img/lapanganbola3.jpg" alt="Lapangan 2">
                 <div class="lapangan-info">
-                    <h3>Lapangan B</h3>
+                    <h3>Lapangan Sepak Bola</h3>
                     <p>Kapasitas: 50 Orang</p>
                     <p>Status: <span class="not-available">Tidak Tersedia</span></p>
                     <p>Deskripsi: Lapangan dengan kualitas standar untuk olahraga bersama.</p>
@@ -81,10 +81,10 @@
             </div>
 
             <div class="lapangan-card">
-                <img src="img/lapanganbola3.jpg" alt="Lapangan 3">
+                <img src="img/lapanganbasket.jpg" alt="Lapangan 3">
                 <div class="lapangan-info">
-                    <h3>Lapangan C</h3>
-                    <p>Kapasitas: 50 Orang</p>
+                    <h3>Lapangan Basket</h3>
+                    <p>Kapasitas: 30 Orang</p>
                     <p>Status: <span class="available">Tersedia</span></p>
                     <p>Deskripsi: Lapangan kecil yang cocok untuk latihan individu atau permainan kecil.</p>
                 </div>
@@ -93,7 +93,7 @@
             <div class="lapangan-card">
                 <img src="img/lapangan-futsal.jpg" alt="Lapangan 4">
                 <div class="lapangan-info">
-                    <h3>Lapangan D</h3>
+                    <h3>Lapangan Basket Dan Futsal</h3>
                     <p>Kapasitas: 22 Orang</p>
                     <p>Status: <span class="not-available">Tidak Tersedia</span></p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, dolore.</p>
@@ -101,9 +101,9 @@
             </div>
 
             <div class="lapangan-card">
-                <img src="img/lapangan-futsal2.jpg" alt="Lapangan 5">
+                <img src="img/lapangan-basket2.jpg" alt="Lapangan 5">
                 <div class="lapangan-info">
-                    <h3>Lapangan E</h3>
+                    <h3>Lapangan Bola Basket</h3>
                     <p>Kapasitas: 32 Orang</p>
                     <p>Status: <span class="available">Tersedia</span></p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, dolore.</p>
