--- a/booking-lapangan/booking.html
+++ b/booking-lapangan/booking.html
@@ -47,7 +47,7 @@
                 <input type="time" id="waktu-selesai" name="waktu-selesai" required>
 
                 <div class="harga">
-                    <h3>Harga:</h3>
+                    <h3>Harga: Rp.0</h3>
                     <p id="harga">Pilih lapangan dan waktu untuk melihat harga.</p>
                 </div>            
         
